@@ -96,7 +96,7 @@ module Capistrano
     def initialize(args = ARGV)
       @args = args
       @options = { :recipes => [], :actions => [], :vars => {},
-        :pre_vars => {} }
+        :pre_vars => {}, :dotfile => default_dotfile }
 
       OptionParser.new do |opts|
         opts.banner = "Usage: #{$0} [options] [args]"
@@ -109,6 +109,14 @@ module Capistrano
           "An action to execute. Multiple actions may",
           "be specified, and are loaded in the given order."
         ) { |value| @options[:actions] << value }
+
+        opts.on("-c", "--caprc FILE",
+          "Specify an alternate personal config file to load.",
+          "(Default: #{@options[:dotfile]})"
+        ) do |value|
+          abort "The config file `#{value}' does not exist" unless File.exist?(value)
+          @options[:dotfile] = value
+        end
 
         opts.on("-f", "--file FILE",
           "A recipe file to load. Multiple recipes may",
@@ -146,6 +154,12 @@ module Capistrano
           name, value = pair.split(/=/, 2)
           @options[:pre_vars][name.to_sym] = value
         end
+
+        opts.on("-x", "--skip-config",
+          "Disables the loading of the default personal config",
+          "file. Specifying -C after this option will reenable",
+          "it. (Default: config file is loaded)"
+        ) { @options[:dotfile] = nil }
 
         opts.separator ""
         opts.separator "Framework Integration Options --------"
@@ -245,6 +259,7 @@ DETAIL
         config.set :pretend, options[:pretend]
 
         options[:pre_vars].each { |name, value| config.set(name, value) }
+        config.load(@options[:dotfile]) if @options[:dotfile] && File.exist?(@options[:dotfile])
 
         # load the standard recipe definition
         config.load "standard"
@@ -286,6 +301,16 @@ DETAIL
           @options[:application] = args.shift
           @options[:recipe_file] = args.shift
         end
+      end
+
+      def default_dotfile
+        File.join(home_directory, ".caprc")
+      end
+
+      def home_directory
+        ENV["HOME"] ||
+          (ENV["HOMEPATH"] && "#{ENV["HOMEDRIVE"]}#{ENV["HOMEPATH"]}") ||
+          "/"
       end
 
       def look_for_default_recipe_file!
